attempt to fix an issue where content behing the overlay scrolls on ios devices

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -42,6 +42,9 @@ header {
 
 .no-scroll {
     overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 header .container {
